--- a/web/app/templates/index.html
+++ b/web/app/templates/index.html
@@ -47,40 +47,41 @@
     <div class="thumbnail"> <a href="hotTopic"><img src="{{ url_for('static', filename='topic.jpg') }}" alt="" width="2000" class="cards"/></a>
       <h4>Scenario 2</h4>
       <p class="tag">Top 10 Hot Topics</p>
-      <p class="text_column">we investigated the top 10 hot topics to track what people are talking about recently. </p>
+      <p class="text_column">we investigated the top 10 hot topics to track what people are talking about recently.The popular users shows the user with the count of the favorites. </p>
     </div>
-    <div class="thumbnail"> <a href="negativeCity"><img src="{{ url_for('static', filename='sentiment.png') }}" alt="" width="2000" class="cards"/></a>
-      <h4>Scenario 3</h4>
-      <p class="tag">Negative Sentiment in Different Cities</p>
-      <p class="text_column">In this scenario, we compared the rates of tweets with negative polarity value located in several cities, including Melbourne, Sydney, Brisbane, Perth and others.</p>
-    </div>
+
     <div class="thumbnail"> <a href="userDistribution"><img src="{{ url_for('static', filename='userdis.png') }}" alt="" width="2000" class="cards"/></a>
-      <h4>Scenario 4</h4>
-      <p class="tag">Tweeter Users Distribution</p>
+      <h4>Scenario 3</h4>
+      <p class="tag">Twitter Users Distribution</p>
       <p class="text_column">This scenarios focuses on how many tweeter users in several major Australian cities: Sydney,Melbourne,Brisbane and others.</p>
     </div>
-  </div>
-  <div class="Scenarios">
     <div class="thumbnail"> <a href="source"><img src="{{ url_for('static', filename='devices.jpg') }}" alt="" width="2000" class="cards"/></a>
-      <h4>Scenario 5</h4>
+      <h4>Scenario 4</h4>
       <p class="tag">Sentiment on Different Device</p>
-      <p class="text_column">In order to figure out users’ sentiment on different device, especially mobile device, we designed a view to obtain the average polarity values on a few types of source equipment, which are iPhone, Android, iPad and others.</p>
+      <p class="text_column">In order to figure out users’ sentiment on different device, especially mobile device, we designed a view to obtain the average polarity values on these devices.</p>
     </div>
+  </div>
+  <div class="Scenarios">   
     <div class="thumbnail"> <a href="sport"><img src="{{ url_for('static', filename='AFL.jpg') }}" alt="" width="2000" class="cards"/></a>
-      <h4>Scenario 6</h4>
+      <h4>Scenario 5</h4>
       <p class="tag">Sentiment towards sports</p>
       <p class="text_column">To make sense how much people like the AFL teams, this scenario is designed to obtain the average value of polarity when people mention them.</p>
     </div>
     <div class="thumbnail"> <a href="24hour"><img src="{{ url_for('static', filename='sentiment2.png') }}" alt="" width="2000" class="cards"/></a>
-      <h4>Scenario 7</h4>
+      <h4>Scenario 6</h4>
       <p class="tag">24-Hour Happiness Trend</p>
       <p class="text_column">This scenario investigates the rate of the twitters which is of a positive polarity value among all twitter data, to reflect the happiness trend during the whole day.
 </p>
     </div>
     <div class="thumbnail"> <a href="weather"><img src="{{ url_for('static', filename='weather.gif') }}" alt="" width="2000" class="cards"/></a>
-      <h4>Scenario 8</h4>
+      <h4>Scenario 7</h4>
       <p class="tag">Sentiment towards Bad Weather</p>
       <p class="text_column">Considering people may have different emotions on bad weather, this app is also implemented to compare uses’ sentiment in different kinds of bad weather. </p>
+    </div>
+    <div class="thumbnail"> <a href="negativeCity"><img src="{{ url_for('static', filename='sentiment.png') }}" alt="" width="2000" class="cards"/></a>
+      <h4>Scenario 8</h4>
+      <p class="tag"> Sentiment in Different suburbs</p>
+      <p class="text_column">In this scenario, we compared the average polarity value located in several suburbs, including Melbourne, Sydney, Brisbane, Perth and others.</p>
     </div>
   </div>
   <!-- Footer Section -->
