--- a/web/app/templates/districtPolarity.html
+++ b/web/app/templates/districtPolarity.html
@@ -1,12 +1,11 @@
 {% extends 'Scenarios.html' %}
 
-{% block title %}Users{% endblock %}
+{% block title %}DistrictPolarity{% endblock %}
 
 {% block intro %}
-<h5>scenario 3</h5>
-<h5>Which city has the most twitter users?</h5>
+<h5>scenario 8</h5>
+<h5>The average polarity of different suburbs</h5>
 {% endblock %}
-
 {% block head %}
     <script type="text/javascript">
         // Load the Visualization API and the corechart package.
@@ -15,24 +14,24 @@
         google.charts.setOnLoadCallback(drawChart);
 
         function drawChart() {
-
-             $.getJSON("{{ url_for('userDistribution_data') }}", function (data) {
+             $.getJSON("{{ url_for('districtPolarity_data') }}", function (data) {
                 var data1 = new google.visualization.DataTable(data);
-                data1.sort({column: 1, desc: true}); 
                 var options = {
                     height: 500,
-                    title: 'The number of tweeter users in four big cities?',
+                    title: 'The average polarity of suburbs ',
                 };
-                var chart1 = new google.visualization.ColumnChart(document.getElementById('chart_div'));
+                var chart1 = new google.visualization.BarChart(document.getElementById('chart_div1'));
              chart1.draw(data1, options);
             });
+
          }
 
     </script>
 {% endblock %}
 
 {% block column %}
-    <div id="chart_div"></div>
+    <div id="chart_div1"></div>
+    <h5>The AURIN data</h5>
     <div class="picture">
-      <img src="{{ url_for('static', filename='au_population.jpg') }}" alt="" class="profile1"> </div>
+      <img src="{{ url_for('static', filename='suburb_polarity.png') }}" alt="" class="profile1" align = "center"> </div>
 {% endblock %}
